--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ button{
   src="img/share.png"
   id="whatsapp-share-button">
   <section class="img">
-    <img src="img/Love.png" alt="">
+    <img src="Love.png" alt="">
   </section>
 
   <div class="container">
